--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -Wall -g -fdiagnosti
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -fmax-errors=2")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 
-set(SOURCE_FILES src/main.cpp src/logger.cpp include/logger.hpp src/arguments.cpp include/arguments.hpp src/bruteforce.cpp include/bruteforce.hpp)
+set(SOURCE_FILES src/main.cpp src/logger.cpp include/logger.hpp src/arguments.cpp include/arguments.hpp src/bruteforce.cpp include/bruteforce.hpp src/threaded-bruteforce.cpp include/threaded-bruteforce.hpp)
 
 add_executable(unsha-me ${SOURCE_FILES})
 
